[project]
name = "PySocketLib"
version = "0.3"
authors = [
  { name="Samsonov Igor", email="ig.samsonov10@yandex.ru" },
]
description = "Library to simplify working with socket"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Minuta18/PySocketLib"
"Bug Tracker" = "https://github.com/Minuta18/PySocketLib/issues"